mejoras version mobile

--- a/index.html
+++ b/index.html
@@ -10,72 +10,65 @@
 </head>
 <body>
 	<div class="container">
-		<!--BA VIVE-->
 		<div id="header">
 			<h1>Parque Centenario</h1>
 		</div>	
-
 		<div class="quote">
 		    <h2> En el bosque no hay wifi, pero en la experiencia BA Vive, la conexión con la naturaleza</h2>
+		</div>
+		<div class="info"> 	
+		     <p> En experiencia BA Centenario podrás estar en contacto no sólo con la naturaleza, sino que podrás construir la mejor versión de vos mismo. Con un amplio espacio verde de 300 has., espacios de ejercicios múltiples, anfiteatro, caniles, areas de esparcimiento, skate park, graffiti zone y zona de juegos para los mas pequeños de la familia.</p>
 		</div>	
-			<!-- galería de thumbnails - se pueden abrir y ver en grande -->
+		<h2>El parque en imágenes</h2>
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/2.jpg" target="_blank" class="thumbnail"><img src="img/2.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/3.jpg" target="_blank" class="thumbnail"><img src="img/3.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/4.jpg" target="_blank" class="thumbnail"><img src="img/4.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/5.jpg" target="_blank" class="thumbnail"><img src="img/5.jpg" alt="..."></a>
 			</div>
-		</div>
-			<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/6.jpg" target="_blank" class="thumbnail"><img src="img/6.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/7.jpg" target="_blank" class="thumbnail"><img src="img/7.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/8.jpg" target="_blank" class="thumbnail"><img src="img/8.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/9.jpg" target="_blank" class="thumbnail"><img src="img/9.jpg" alt="..."></a>
 			</div>
-		</div>
-			<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/10.jpg" target="_blank" class="thumbnail"><img src="img/10.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/11.jpg" target="_blank" class="thumbnail"><img src="img/11.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/12.jpg" target="_blank" class="thumbnail"><img src="img/12.jpg" alt="..."></a>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-4">
 				<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/13.jpg" alt="..."></a>
 			</div>
-		</div>
 		</div>		
-		<div class="info"> 	
-		     <p> En experiencia BA Centenario podrás estar en contacto no sólo con la naturaleza, sino que podrás construir la mejor versión de vos mismo. Con un amplio espacio verde de 300 has., espacios de ejercicios múltiples, anfiteatro, caniles, areas de esparcimiento, skate park, graffiti zone y zona de juegos para los mas pequeños de la familia.</p>	
-		</div>
-		
 		<footer>
-			<h3>Cómo llegar</h3>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8990013639973!2d-58.43796838513966!3d-34.60671536516288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521214686463" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+			<div id="mapa">
+				<h2>Ubicación</h3>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8990013639973!2d-58.43796838513966!3d-34.60671536516288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca688994eb61%3A0xd055df0a7dafa86e!2sParque+Centenario!5e0!3m2!1ses-419!2sar!4v1521214686463" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
 			<div class="icons">
-		<a class="fa fa-twitter" style="font-size:36px; color: cyan" href="https://twitter.com/elanfidelparque?lang=es" target="_blank"></a>
-		<a class="fa fa-facebook-official" style="font-size:36px; color: blue" href="https://es-la.facebook.com/vecinosparquecentenario/" target="_blank"></a>
-		<a class="fa fa-github" style="font-size:36px; color: black" href="https://github.com/mechamech/Ada_WebParqueCentenario" target="_blank"></a>
-		<a class="fa fa-instagram" style="font-size:36px; color: red" href="https://www.instagram.com/explore/locations/1084879471568253/parque-centenario-buenos-aires-argentina/" target="_blank"></a>
-	</div>
+				<a class="fa fa-twitter" style="font-size:36px; color: cyan" href="https://twitter.com/elanfidelparque?lang=es" target="_blank"></a>
+				<a class="fa fa-facebook-official" style="font-size:36px; color: blue" href="https://es-la.facebook.com/vecinosparquecentenario/" target="_blank"></a>
+				<a class="fa fa-github" style="font-size:36px; color: black" href="https://github.com/mechamech/Ada_WebParqueCentenario" target="_blank"></a>
+				<a class="fa fa-instagram" style="font-size:36px; color: red" href="https://www.instagram.com/explore/locations/1084879471568253/parque-centenario-buenos-aires-argentina/" target="_blank"></a>
+			</div>
 		</footer>
 	</div>
 </body>
