--- a/index.html
+++ b/index.html
@@ -14,48 +14,50 @@
 			<h1>Parque Centenario</h1>
 		</div>	
 		<div class="quote">
-		    <h2> En el bosque no hay wifi, pero en la experiencia BA Vive, la conexión con la naturaleza</h2>
+		    <h2>En el bosque no hay wifi, pero en la experiencia BA Vive, la conexión con la naturaleza</h2>
 		</div>
 		<div class="info"> 	
 		     <p> En experiencia BA Centenario podrás estar en contacto no sólo con la naturaleza, sino que podrás construir la mejor versión de vos mismo. Con un amplio espacio verde de 300 has., espacios de ejercicios múltiples, anfiteatro, caniles, areas de esparcimiento, skate park, graffiti zone y zona de juegos para los mas pequeños de la familia.</p>
 		</div>	
-		<h2>El parque en imágenes</h2>
-		<div class="row">
-			<div class="col-md-3 col-xs-4">
-				<a href="img/2.jpg" target="_blank" class="thumbnail"><img src="img/2.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/3.jpg" target="_blank" class="thumbnail"><img src="img/3.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/4.jpg" target="_blank" class="thumbnail"><img src="img/4.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/5.jpg" target="_blank" class="thumbnail"><img src="img/5.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/6.jpg" target="_blank" class="thumbnail"><img src="img/6.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/7.jpg" target="_blank" class="thumbnail"><img src="img/7.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/8.jpg" target="_blank" class="thumbnail"><img src="img/8.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/9.jpg" target="_blank" class="thumbnail"><img src="img/9.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/10.jpg" target="_blank" class="thumbnail"><img src="img/10.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/11.jpg" target="_blank" class="thumbnail"><img src="img/11.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/12.jpg" target="_blank" class="thumbnail"><img src="img/12.jpg" alt="..."></a>
-			</div>
-			<div class="col-md-3 col-xs-4">
-				<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/13.jpg" alt="..."></a>
+		<div id="gallery">
+			<h2>El parque en imágenes</h2>
+			<div class="row">
+				<div class="col-md-3 col-xs-4">
+					<a href="img/2.jpg" target="_blank" class="thumbnail"><img src="img/2.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/3.jpg" target="_blank" class="thumbnail"><img src="img/3.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/4.jpg" target="_blank" class="thumbnail"><img src="img/4.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/5.jpg" target="_blank" class="thumbnail"><img src="img/5.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/6.jpg" target="_blank" class="thumbnail"><img src="img/6.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/7.jpg" target="_blank" class="thumbnail"><img src="img/7.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/8.jpg" target="_blank" class="thumbnail"><img src="img/8.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/9.jpg" target="_blank" class="thumbnail"><img src="img/9.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/10.jpg" target="_blank" class="thumbnail"><img src="img/10.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/11.jpg" target="_blank" class="thumbnail"><img src="img/11.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/12.jpg" target="_blank" class="thumbnail"><img src="img/12.jpg" alt="..."></a>
+				</div>
+				<div class="col-md-3 col-xs-4">
+					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/13.jpg" alt="..."></a>
+				</div>
 			</div>
 		</div>		
 		<footer>
