Gifs y video. Nada de carrusel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+
 
 </head>
 <body>
@@ -58,6 +61,16 @@
 				<div class="col-md-3 col-xs-4">
 					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/13.jpg" alt="..."></a>
 				</div>
+
+				<div class="col-md-6 col-xs-6">
+					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/agua.gif" alt="..."></a>
+				</div>
+				<div class="col-md-6 col-xs-6">
+					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/fuente.gif" alt="..."></a>
+				</div>
+
+
+
 			</div>
 		</div>		
 		<footer>
@@ -71,7 +84,16 @@
 				<a class="fa fa-github" style="font-size:36px; color: black" href="https://github.com/mechamech/Ada_WebParqueCentenario" target="_blank"></a>
 				<a class="fa fa-instagram" style="font-size:36px; color: red" href="https://www.instagram.com/explore/locations/1084879471568253/parque-centenario-buenos-aires-argentina/" target="_blank"></a>
 			</div>
+
+
+			<div id="video">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/TRryo9Pcug8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+
+
 		</footer>
+
+
 	</div>
 </body>
 </html>
