--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<div id="header">
 			<h1>Parque Centenario</h1>
 		</div>	
-		<div class="quote">
+		<!-- <div class="quote">
 		    <h2>En el bosque no hay wifi, pero en la experiencia BA Vive, la conexión con la naturaleza</h2>
-		</div>
+		</div> -->
 		<div class="info"> 	
 		     <p> En experiencia BA Centenario podrás estar en contacto no sólo con la naturaleza, sino que podrás construir la mejor versión de vos mismo. Con un amplio espacio verde de 300 has., espacios de ejercicios múltiples, anfiteatro, caniles, areas de esparcimiento, skate park, graffiti zone y zona de juegos para los mas pequeños de la familia.</p>
 		</div>	
