--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Parque Centenario</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+	
 
 
 </head>
