arreglo del gif

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				</div>
 
 				<div class="col-md-6 col-xs-6">
-					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/agua.gif" alt="..."></a>
+					<a href="img/agua.gif" target="_blank" class="thumbnail"><img src="img/agua.gif" alt="..."></a>
 				</div>
 				<div class="col-md-6 col-xs-6">
-					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/fuente.gif" alt="..."></a>
+					<a href="img/fuente.gif" target="_blank" class="thumbnail"><img src="img/fuente.gif" alt="..."></a>
 				</div>
 
 
