--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 					<a href="img/12.jpg" target="_blank" class="thumbnail"><img src="img/12.jpg" alt="..."></a>
 				</div>
 				<div class="col-md-3 col-xs-4">
-					<a href="img/13.jpg" target="_blank" class="thumbnail"><img src="img/13.jpg" alt="..."></a>
+					<a href="img/1.jpg" target="_blank" class="thumbnail"><img src="img/1.jpg" alt="..."></a>
 				</div>
 
 				<div class="col-md-6 col-xs-6">
 					<a href="img/agua.gif" target="_blank" class="thumbnail"><img src="img/agua.gif" alt="..."></a>
 				</div>
 				<div class="col-md-6 col-xs-6">
-					<a href="img/fuente.gif" target="_blank" class="thumbnail"><img src="img/fuente.gif" alt="..."></a>
+					<a href="img/bombos.gif" target="_blank" class="thumbnail"><img src="img/bombos.gif" alt="..."></a>
 				</div>
 			</div>
 		</div>		
